Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59456

Render Capture C++ Example Crashes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.9.0 Beta 2
    • 5.9
    • Qt3D
    • None
    • c0c856168efa470d31d7261324dc1e94d4d99612

      • Compile and run tests/manual/rendercapture-cpp
      • Click the capture button
      • Crash: ASSERT failure in Q_UNREACHABLE(): "Q_UNREACHABLE was reached", file graphicshelpers/graphicscontext.cpp, line 1790
      1  __pthread_kill                                                                                                             0x7fff8d838286 
      2  pthread_kill                                                                                                               0x7fff8e2589f9 
      3  abort                                                                                                                      0x7fff8fe959a3 
      4  qt_message_fatal(QtMsgType, QMessageLogContext const&, QString const&)                            qlogging.cpp        1690 0x1017e9d38    
      5  QMessageLogger::fatal(const char *, ...) const                                                    qlogging.cpp        796  0x1017ec05e    
      6  qt_assert_x(const char *, const char *, const char *, int)                                        qglobal.cpp         3045 0x1017e03ca    
      7  Qt3DRender::Render::GraphicsContext::readFramebuffer(QSize)                                       graphicscontext.cpp 1790 0x10028d01e    
      8  Qt3DRender::Render::Renderer::submitRenderViews(QVector<Qt3DRender::Render::RenderView *> const&) renderer.cpp        1292 0x100193345    
      9  Qt3DRender::Render::Renderer::doRender()                                                          renderer.cpp        607  0x10019177a    
      10 Qt3DRender::Render::Renderer::render()                                                            renderer.cpp        526  0x1001914ae    
      11 Qt3DRender::Render::RenderThread::run()                                                           renderthread.cpp    97   0x10018de53    
      12 QThreadPrivate::start(void *)                                                                     qthread_unix.cpp    368  0x1018112e6    
      13 _pthread_body                                                                                                              0x7fff8e25705a 
      14 _pthread_start                                                                                                             0x7fff8e256fd7 
      15 thread_start                                                                                                               0x7fff8e2543ed 
      

        For Gerrit Dashboard: QTBUG-59456
        # Subject Branch Project Status CR V

            anmaatta Antti Määttä
            asm Andy M
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes