Fix resolving of render target format in GraphicsContext

The GraphicsContext render target format was not being resolved properly
when the alphaBufferSize was -1.

Also initialize the member var storing the render buffer format.

Change-Id: I939ccf29f6cf9ef66befe5deee7ce94e2dc19a26
Task-number: QTBUG-59456
Reviewed-by: Antti Määttä <antti.maatta@qt.io>